@@ -1,3 +1,7 @@
+2007-09-18    <tino@firebird.03.softkill.net>
+
+	* ptybufferconnect.c (ignore_fn): added, should work now as expected
+
 2007-09-06    <tino@firebird.03.softkill.net>
 
 	* script/autostart.sh: "start"-message now is send to STDERR too,
